maven-assembly-plugin

--- a/zxcv-busi/pom.xml
+++ b/zxcv-busi/pom.xml
@@ -79,7 +79,10 @@
                     <mainClass>com.zxcv.busi.ZXCVBusiApplication</mainClass>
                 </configuration>
             </plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
