--- a/zxcv-web/src/main/resources/application-dev.yml
+++ b/zxcv-web/src/main/resources/application-dev.yml
@@ -1,14 +1,16 @@
 spring:
   redis:
-      host: 39.98.58.92
+      host:  47.94.158.36
       database: 0
-      port: 6379
-      password: 111111111
+      port: 7013
+      password: zxcv@redis
       #连接超时时间（毫秒）
       timeout: 10000
       lettuce:
         pool:
           max-wait: -1ms
+
+
 
 
 
@@ -45,3 +47,12 @@ rocketmq:
   producer:
     group: clouds_park
     sendMessageTimeout: 300000
+    
+fdfs:
+  soTimeout: 1500
+  connectTimeout: 600
+  thumbImage:             #缩略图生成参数
+    width: 150
+    height: 150
+  trackerList:            #TrackerList参数,支持多个
+    - 47.94.158.36:8080
