--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,8 @@
         <weixin-java-miniapp.version>3.3.0</weixin-java-miniapp.version>
         <lombok.version>1.18.6</lombok.version>
         <xxl-job-version>2.1.0</xxl-job-version>
+        <fastdfs-client-java.version>1.26.1-RELEASE</fastdfs-client-java.version>
+        <fastdfs-client-xz.version>1.27-SNAPSHOT</fastdfs-client-xz.version>
     </properties>
 
     <!--依赖配置-->
@@ -241,6 +243,44 @@
                 <groupId>com.xuxueli</groupId>
                 <artifactId>xxl-job-core</artifactId>
                 <version>${xxl-job-version}</version>
+            </dependency>
+            <dependency>
+            <groupId>com.github.tobato</groupId>
+            <artifactId>fastdfs-client</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>jcl-over-slf4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+                <groupId>com.github.tobato</groupId>
+                <artifactId>fastdfs-client</artifactId>
+                <version>${fastdfs-client-java.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-api</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.hibernate</groupId>
+                        <artifactId>hibernate-validator</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-core</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.csource</groupId>
+                <artifactId>fastdfs-client-java</artifactId>
+                <version>${fastdfs-client-xz.version}</version>
             </dependency>
         </dependencies>
 
