--- a/zxcv-busi/src/main/resources/application-dev.yml
+++ b/zxcv-busi/src/main/resources/application-dev.yml
@@ -13,10 +13,10 @@ spring:
       version: 1.0.0
   #redis配置
   redis:
-    host: 39.98.58.92
+    host: 47.94.158.36
     database: 0
-    port: 6379
-    password: 11111111111
+    port: 7013
+    password: zxcv@redis
     #连接超时时间（毫秒）
     timeout: 50000
     lettuce:
@@ -81,7 +81,7 @@ mybatis-plus:
 
 local:
   base:
-    url: http://47.104.196.152:8090
+    url: http://182.92.118.137:8081
 
 alipay:
   notify:
