--- a/zxcv-web/src/main/resources/application-dev.yml
+++ b/zxcv-web/src/main/resources/application-dev.yml
@@ -49,10 +49,11 @@ rocketmq:
     sendMessageTimeout: 300000
     
 fdfs:
+  fdsurl: http://47.94.158.36:8080 #fds访问url
   soTimeout: 1500
   connectTimeout: 600
   thumbImage:             #缩略图生成参数
     width: 150
     height: 150
   trackerList:            #TrackerList参数,支持多个
-    - 47.94.158.36:8080
+    - 47.94.158.36:22122
