--- a/zxcv-web/src/main/resources/application-dev.yml
+++ b/zxcv-web/src/main/resources/application-dev.yml
@@ -1,14 +1,22 @@
 spring:
   redis:
-      host:  47.94.158.36
-      database: 0
-      port: 7013
-      password: zxcv@redis
-      #连接超时时间（毫秒）
-      timeout: 10000
-      lettuce:
-        pool:
-          max-wait: -1ms
+    cluster:
+      nodes:
+      - 47.94.158.36:7011
+      - 47.94.158.36:7012
+      - 47.94.158.36:7013
+      - 47.94.158.36:7014
+      - 47.94.158.36:7015
+      - 47.94.158.36:7016
+    password: zxcv@redis
+    max-redirects: 3  # 获取失败 最大重定向次数
+    #连接超时时间（毫秒）
+    timeout: 50000
+    lettuce:
+      max-active: 500
+      max-idle: 1000
+      min-idle: 100
+      max-wait: -1
 
 
 
@@ -30,7 +38,7 @@ logging:
   level:
     org.springframework.web: error
     io.lettuce.core.protocol: error
-  path:  ./logs/${spring.application.name}
+  path: /zxcv/zxcv/zxcv-logs/${spring.application.name}
   file: ${logging.path}/${spring.application.name}.log
   config: classpath:logback-spring.xml
 
