--- a/zxcv-busi/pom.xml
+++ b/zxcv-busi/pom.xml
@@ -44,14 +44,14 @@
         </dependency>
 
         <!--hutool-all-->
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>cn.hutool</groupId>-->
+            <!--<artifactId>hutool-all</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.alibaba</groupId>-->
+            <!--<artifactId>fastjson</artifactId>-->
+        <!--</dependency>-->
         <!--###############支付场景接入##################### -->
         <!-- IJPay-->
         <!-- <dependency>
