--- a/zxcv-framework/pom.xml
+++ b/zxcv-framework/pom.xml
@@ -120,16 +120,16 @@
             <artifactId>spring-messaging</artifactId>
             <!-- <version>5.1.0.RELEASE</version> -->
         </dependency>
-		<dependency>
-			<groupId>org.apache.ant</groupId>
-			<artifactId>ant</artifactId>
-			<version>1.8.2</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sourceforge.javacsv</groupId>
-			<artifactId>javacsv</artifactId>
-			<version>2.0</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.apache.ant</groupId>-->
+			<!--<artifactId>ant</artifactId>-->
+			<!--<version>1.8.2</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+			<!--<groupId>net.sourceforge.javacsv</groupId>-->
+			<!--<artifactId>javacsv</artifactId>-->
+			<!--<version>2.0</version>-->
+		<!--</dependency>-->
     </dependencies>
 
     <build>
