--- a/zxcv-busi/src/main/resources/application-dev.yml
+++ b/zxcv-busi/src/main/resources/application-dev.yml
@@ -12,24 +12,34 @@ spring:
     provider:
       version: 1.0.0
   #redis配置
-  redis:
-    cluster:
-      nodes:
-      - 47.94.158.36:7011
-      - 47.94.158.36:7012
-      - 47.94.158.36:7013
-      - 47.94.158.36:7014
-      - 47.94.158.36:7015
-      - 47.94.158.36:7016
-    password: zxcv@redis
-    max-redirects: 3  # 获取失败 最大重定向次数
-    #连接超时时间（毫秒）
-    timeout: 50000
-    lettuce:
-        max-active: 500
-        max-idle: 1000
-        min-idle: 100
-        max-wait: -1
+#  redis:
+#    cluster:
+#      nodes:
+#      - 47.94.158.36:7011
+#      - 47.94.158.36:7012
+#      - 47.94.158.36:7013
+#      - 47.94.158.36:7014
+#      - 47.94.158.36:7015
+#      - 47.94.158.36:7016
+#    password: zxcv@redis
+#    max-redirects: 3  # 获取失败 最大重定向次数
+#    #连接超时时间（毫秒）
+#    timeout: 10000
+#    lettuce:
+#        max-active: 500
+#        max-idle: 1000
+#        min-idle: 100
+#        max-wait: -1
+#  redis:
+#    host: 39.98.58.92
+#    database: 8
+#    port: 6379
+#    password: Zteits_dev
+#    #连接超时时间（毫秒）
+#    timeout: 10000
+#    lettuce:
+#      pool:
+#        max-wait: -1ms
 
 
 server:
