--- a/zxcv-web/src/main/resources/application-dev.yml
+++ b/zxcv-web/src/main/resources/application-dev.yml
@@ -20,8 +20,8 @@ spring:
   redis:
     host: 182.92.118.137
     database: 0
-    port: 6379
-    password: zxcv@redis
+    port: 8001
+    password: fh3nmo34kle9
     #连接超时时间（毫秒）
     timeout: 10000
     lettuce:
